--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ h2 {
     border-radius: 0.2em;
     border: #141414 solid 1px;
     background-color: #191919;
+    color: #ffffff;
     text-align: center;
     font-size: 1.5em;
 }
