--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ h2 {
     height: 50px;
     outline: none;
     border-radius: 0.2em;
-    border: #141414 solid 1px;
+    border: #141414 solid 2px;
     background-color: #191919;
     color: #ffffff;
     text-align: center;
@@ -67,13 +67,13 @@ label {
     color: #ffffff;
 }
 
-.input-wrapper {
-    margin: 1em;
+input:focus {
+    border: #e5202b solid 2px !important;
+    color: #e5202b !important;
 }
 
-input:focus {
-    border: #e5202b solid 1px;
-    color: #e5202b;
+.input-wrapper {
+    margin: 1em;
 }
 
 #error-msg {
